* preserve em and rem units on numerator in calc operation in theme (#2314)

Improvements::

* don't include bottom margin when computing heading height if `heading-min-height-after` theme key is empty (#2326)
* ensure `heading-min-height-after` theme key is ignored if section is empty or discrete heading is last child

Bug Fixes::

* keep caret between items in menu macro with previous item if items wrap
* draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
* arrange heading even if section is empty
* don't force justify first line of abstract if it ends with a hard break
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline

== 2.3.0 (2022-08-16) - @mojavelinux

Enhancements::

* place footnotes directly below last block of content if `footnotes-margin-top` theme key is 0 (#2291)
* allow page / column break to be forced using `always` option (e.g., `[%always]`) (#2300)
* insert column break instead of page break in multi-column layout if `column` role is specified on page break macro (#2293)
* use relative font size for big and small roles (#2307)
* use default-for-print theme by default if media is `print` or `prepress` (#2306)
* support text alignment roles on all styled paragraphs
* support text alignment roles on verse block

Bug Fixes::

* only indent text that starts at left margin (i.e., when text align is left or justify) (#2298)
* apply text transform and formatting when checking height of heading for orphan prevention
* apply text transform and formatting when computing height of background for caption
* honor theme settings (`prose-margin-inner` and `prose-text-indent-inner`) for inner paragraphs in abstract
* prevent footnote label from being split across lines (#2297)
* keep footnote label with preceding text if adjacent (#2297)
* strip formatting added to source block by custom subs when syntax highlighter is enabled (#2086)
